minor changes
