# producer/docs/swagger.yaml
@@ -53,7 +53,7 @@ info:
   contact: {}
   description: Test task for the position of Golang Developer
   title: Microservice for message processing
-  version: 0.0.1
+  version: 0.0.2
 paths:
   /messages:
     delete:
@@ -119,6 +119,33 @@ paths:
       tags:
       - messages
   /messages/{id}:
+    delete:
+      description: Delete message by id
+      operationId: delete-message
+      parameters:
+      - description: Message ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Delete message
+      tags:
+      - messages
     get:
       consumes:
       - application/json
